# pandas_etl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TODO  commands.md  pyproject.toml
pandas-etl-ui/: README.md  angular.json  package-lock.json  package.json
pandas-etl-ui/src/: index.html  styles.scss
pandas-etl-ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
pandas-etl-ui/src/app/components/drawflow/: drawflow.component.scss  drawflow.component.ts
pandas-etl-ui/src/app/components/form/: form.component.html  form.component.scss  form.component.ts
pandas-etl-ui/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
pandas-etl-ui/src/app/components/mainpage/: mainpage.component.html  mainpage.component.scss
pandas-etl-ui/src/app/components/sidebar/: sidebar.component.html  sidebar.component.ts
pandas-etl-ui/src/app/drawflow/: drawflow.component.html  drawflow.component.scss  drawflow.component.ts
pandas-etl-ui/src/app/header/: header.component.html  header.component.scss
pandas-etl-ui/src/app/interfaces/: form-state.ts  node-specs.ts  tab-state.ts
pandas-etl-ui/src/app/mainpage/: mainpage.component.html  mainpage.component.scss
pandas-etl-ui/src/app/service/: api.service.ts  drawflow.service.spec.ts  drawflow.service.ts  node-factory.service.spec.ts  node-factory.service.ts  state.service.ts
pandas-etl-ui/src/app/sidebar/: sidebar.component.html  sidebar.component.scss
pandas_etl/: main.py
pandas_etl/extract/: __init__.py  e_csv.py  e_custom.py  e_excel.py  e_json.py  e_sql.py  e_xml.py
pandas_etl/load/: __init__.py  l_csv.py  l_custom.py  l_excel.py  l_json.py  l_sql.py  l_xml.py  load_csv.py
pandas_etl/transform/: __init__.py  t1.py  t_basic.py  t_custom.py  t_join.py
pandas_etl/utils/: decorator.py  exceptions.py  helper.py  mermaid.py
pandas_etl_api/: entities.py  main.py
tests/: conftest.py  test_main.py
tests/extract/: test_csv.py  test_json.py  test_sql.py  test_xml.py
tests/load/: test_csv.py  test_excel.py  test_json.py  test_sql.py  test_xml.py
tests/resources/: custom_script.py  example.yaml  source_a.csv  source_b.csv
tests/transforms/: test_basic.py  test_custom.py  test_join.py
tests/utils/: test_decorator.py  test_helper.py  test_mermaid.py
(+3 files in other folders)
