[tool.poetry]
name = "pandas-etl"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "pandas_etl"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
print-color = "^0.4.6"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
sqlalchemy = {version = "*", optional = true}
psycopg2 = {version = "*", optional = true}
oracledb = {version = "*", optional = true}
xlrd = {version = "*", optional = true}
openpyxl = {version = "*", optional = true}
lxml = {version = "*", optional = true}
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.extras]
pgsql = ["psycopg2", "sqlalchemy"]
oracle = ["oracledb", "sqlalchemy"]
excel = ["xlrd", "openpyxl"]
xml = ["lxml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
